--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 
-	<title>某某，我爱你 </title>  
+	<title>来自你男友的信呀 </title>  
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
