--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 
-	<title>来自你男友的信呀 </title>  
+	<title>来自你男友的一封信呀 </title>  
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -24,8 +24,8 @@
 				<embed height="100" width="100" src="renxi.mp3" />
 			</audio>
 			<div id="code">
-				<span class="comments">某某：</span><br />
-				<span class="space"><span class="comments">我爱你</span></span><br />
+				<span class="comments">世界上最可爱的女朋友：</span><br />
+				<span class="space"><span class="comments">你好呀</span></span><br />
 				<span class="space"/><span class="comments">只有在你的微笑里，我才有呼吸，还贪恋着你的风情，诱惑着你的神秘，埋葬了我的爱情，脉脉之情如一溪春水，快刀难斩断，随着天各一方的时间越来越长，我的思念也越来越深，我很想找一个万籁俱寂的深夜或一个阳光明媚的早晨，把许多心底的惆怅、寂寞向你倾诉。
 				某某，我们的故事是最感人，最真实的，早安，我永恒的爱人，虽然我尚未起床，但思想已经飞到你的身边来了，不管今世也好来世也好，我所要的只有你。我要与你同坐在有着月光的草坪上，一起遥望着繁星点缀的夜空，讲述那人间古老的爱情神话。人生不止，寂寞不已。寂寞人生爱无休，寂寞是爱永远的主题。</span><br />
 				<span class="space"/><span class="comments">某某，在这没有月的漆黑的夜里，我独自坐在窗前写着这封信，希望睡前可以吻你；希望睡时可以抱着你；希望醒来可以看到你，有你的日子，一切都是那么美好，风和日丽，鲜花遍地；没你的日子，白昼是那么的黯淡，黑夜是那么的漫长。你的话已经锁在我的记忆里了，那钥匙你就替我保管一辈子吧。如果你冷，我将你拥入怀中；如果你哭，我替你擦去泪痕。你像那天边的云，飘泊不定，叫人难以追寻；你像那水中的萍，流移四方，叫我难以琢磨。这样的习惯也是一种甜蜜的负担，思念你早已成为我生活中不可缺少的习惯。思念就像河流般，滔滔不绝地流向大海，流向我的心房，当我闭上双眼，你的身影又浮现在我的眼前，一些路我们并肩走过，一些故事我们就是主人公，一首歌我们对唱了那么久，永远不变的是心中深藏的对爱的执着。如果，我只有一天的生命，我会去找你，并告诉你，我是如此的依恋你。我们那两颗充满柔情和陶醉的心永远在一起，我愿做天上的星星，给你永恒的光芒，永远守候在你身边。盼你在每一次想你的瞬间，爱你在每一秒呼吸的间隙。不知为什么，只要有你在我身边，我的心便不再惶惶不安。有你的日子你就是一切，没你的日子一切都是你。
