--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					</div>
 					<div id="loveu">
 						永远爱你，一辈子，不分离！<br/>
-						<div class="signature">- 最爱你的人</div>
+						<div class="signature">- 你的明明不胖却被你说胖的男友</div>
 
 				</div>
 			</div>
