--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
-						永远爱你，一辈子，不分离！<br/>
+						我真的是超级喜欢你呀!!!<br/>
 						<div class="signature">- 你的明明不胖的男友</div>
 
 				</div>
