--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
-						某某, 这是我们认识的第
+						要是我没记错的话，这是我们认识的第
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
