--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 				某某，我想告诉你，自从有了你，我觉得整个世界都在向我点头微笑，你那充满朝气的身影总是伴着月光入我梦来，让我牵挂不停。还记得我俩的初遇。那一瞬间，时间就像静止了一般，你的气质让我觉得惊喜，认识你我的生活充满生机，爱上你我的生活充满激情。</span><br />
 				<span class="space"/><span class="comments">某某，保留一个最浪漫的故事，给你一声祝福，一个kiss，爱你直到永远！
 				某某，理解我吗？我不是弱智，但我会傻傻的爱你到永远。某某，我只想和你白头到老，美轮美奂的你编织着神话，创造着奇迹，只因让我遇到你。接受我，好吗？</span><br />
-				<span class="space"/><span class="comments">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.51bbw.cn">www.51bbw.cn</a> 
-				我要表白网2018.10.20</span><br />
+				<span class="space"/><span class="comments">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				</span><br />
 			</div>
 			<div id="loveHeart">
 				<canvas id="garden"></canvas>
