--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
 			<div id="code">
 				<span class="comments">世界上最可爱的女朋友：</span><br />
 				<span class="space"><span class="comments">你好呀</span></span><br />
-				<span class="space"/><span class="comments">只有在你的微笑里，我才有呼吸，还贪恋着你的风情，诱惑着你的神秘，埋葬了我的爱情，脉脉之情如一溪春水，快刀难斩断，随着天各一方的时间越来越长，我的思念也越来越深，我很想找一个万籁俱寂的深夜或一个阳光明媚的早晨，把许多心底的惆怅、寂寞向你倾诉。
-				某某，我们的故事是最感人，最真实的，早安，我永恒的爱人，虽然我尚未起床，但思想已经飞到你的身边来了，不管今世也好来世也好，我所要的只有你。我要与你同坐在有着月光的草坪上，一起遥望着繁星点缀的夜空，讲述那人间古老的爱情神话。人生不止，寂寞不已。寂寞人生爱无休，寂寞是爱永远的主题。</span><br />
-				<span class="space"/><span class="comments">某某，在这没有月的漆黑的夜里，我独自坐在窗前写着这封信，希望睡前可以吻你；希望睡时可以抱着你；希望醒来可以看到你，有你的日子，一切都是那么美好，风和日丽，鲜花遍地；没你的日子，白昼是那么的黯淡，黑夜是那么的漫长。你的话已经锁在我的记忆里了，那钥匙你就替我保管一辈子吧。如果你冷，我将你拥入怀中；如果你哭，我替你擦去泪痕。你像那天边的云，飘泊不定，叫人难以追寻；你像那水中的萍，流移四方，叫我难以琢磨。这样的习惯也是一种甜蜜的负担，思念你早已成为我生活中不可缺少的习惯。思念就像河流般，滔滔不绝地流向大海，流向我的心房，当我闭上双眼，你的身影又浮现在我的眼前，一些路我们并肩走过，一些故事我们就是主人公，一首歌我们对唱了那么久，永远不变的是心中深藏的对爱的执着。如果，我只有一天的生命，我会去找你，并告诉你，我是如此的依恋你。我们那两颗充满柔情和陶醉的心永远在一起，我愿做天上的星星，给你永恒的光芒，永远守候在你身边。盼你在每一次想你的瞬间，爱你在每一秒呼吸的间隙。不知为什么，只要有你在我身边，我的心便不再惶惶不安。有你的日子你就是一切，没你的日子一切都是你。
-				某某，我想告诉你，自从有了你，我觉得整个世界都在向我点头微笑，你那充满朝气的身影总是伴着月光入我梦来，让我牵挂不停。还记得我俩的初遇。那一瞬间，时间就像静止了一般，你的气质让我觉得惊喜，认识你我的生活充满生机，爱上你我的生活充满激情。</span><br />
-				<span class="space"/><span class="comments">某某，保留一个最浪漫的故事，给你一声祝福，一个kiss，爱你直到永远！
-				某某，理解我吗？我不是弱智，但我会傻傻的爱你到永远。某某，我只想和你白头到老，美轮美奂的你编织着神话，创造着奇迹，只因让我遇到你。接受我，好吗？
+				<span class="space"/><span class="comments">我这有许些话想要跟你讲啊。我年少不更事，想做大生意，然后过上风流快活三妻四妾的生活。可惜胎死腹中，我遇到了你。</span><br />
+				<span class="space"/><span class="comments">我千万告诫自己，不要用情太深，吊死在一颗树上，大不了就先谈着，谈着七八年，可谁曾想，这第一年，我就先干为敬。我得摆好这姿势，才能吹得出氤氲，嚼得出滋味。</span><br />
+				<span class="space"/><span class="comments">不得已，我开始奢望我们的未来，我想那是月老的好生善举。他却偷偷告诉我，我不能这么爱你俗话说物极必反，你瞧那牛郎织女，正是如此。我说，我觉得这事确实是有些古怪，但我就是黏住了她，这我能如何。</span><br />
+				<span class="space"/><span class="comments">没办法，那就只能是这样，可是你这小姑娘呀，就是得要我哄你个七八十年才得行的吧。亦或是你是一颗小灾星，是那一颗和我一起度余生的星星。</span><br />
+				<span class="space"/><span class="comments">我在凡间向这颗星星许了个愿，我希望我能走得比你早，这样子我的后半生便全部都是你。但又不舍得单留你一人在世上，每想至此，我便额蹙心痛。</span><br />
+				<span class="space"/><span class="comments">你要清楚，我如果爱你，绝不学痴情的鸟儿。</span><br />
+				<span class="space"/><span class="comments">但是没有如果，我爱你，很痴情。
 				
 			</div>
 			<div id="loveHeart">
