--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 
-	<title>这有一封来自你男友的信诶</title>  
+	<title>好巧，这有一封你的信诶</title>  
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -28,7 +28,7 @@
 				<span class="space"><span class="comments">你好呀</span></span><br />
 				<span class="space"/><span class="comments">我这有许些话想要跟你讲啊。我年少不更事，想做大生意，然后过上风流快活三妻四妾的生活。可惜胎死腹中，我遇到了你。</span><br />
 				<span class="space"/><span class="comments">我千万告诫自己，不要用情太深，吊死在一颗树上，大不了就先谈着，谈着七八年，可谁曾想，这第一年，我就先干为敬。我得摆好这姿势，才能吹得出氤氲，嚼得出滋味。</span><br />
-				<span class="space"/><span class="comments">不得已，我开始奢望我们的未来，我想那是月老的好生善举。他却偷偷告诉我，我不能这么爱你俗话说物极必反，你瞧那牛郎织女，正是如此。我说，我觉得这事确实是有些古怪，但我就是黏住了她，这我能如何。</span><br />
+				<span class="space"/><span class="comments">不得已，我开始奢望我们的未来，我想那是月老的好生善举。他却偷偷告诉我，我不能这么爱你,俗话说物极必反，你瞧那牛郎织女，正是如此。我说，我觉得这事确实是有些古怪，但我就是黏住了她，这我能如何。</span><br />
 				<span class="space"/><span class="comments">没办法，那就只能是这样，可是你这小姑娘呀，就是得要我哄你个七八十年才得行的吧。亦或是你是一颗小灾星，是那一颗和我一起度余生的星星。</span><br />
 				<span class="space"/><span class="comments">我在凡间向这颗星星许了个愿，我希望我能走得比你早，这样子我的后半生便全部都是你。但又不舍得单留你一人在世上，每想至此，我便额蹙心痛。</span><br />
 				<span class="space"/><span class="comments">你要清楚，我如果爱你，绝不学痴情的鸟儿。</span><br />
