--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 
-	<title>好巧，这有一封你的信诶</title>  
+	<title>好巧，这又有一封你的信诶</title>  
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -24,15 +24,13 @@
 				<embed height="100" width="100" src="renxi.mp3" />
 			</audio>
 			<div id="code">
-				<span class="comments">世界上最可爱的女朋友：</span><br />
-				<span class="space"><span class="comments">你好呀</span></span><br />
-				<span class="space"/><span class="comments">我这有许些话想要跟你讲啊。我呀，年少不更事，想做大生意，然后过上风流快活三妻四妾的生活。可惜胎死腹中，我遇到了你。</span><br />
-				<span class="space"/><span class="comments">我本无意与你相遇，却不曾想竟是这般欢喜。我千万告诫自己，不要用情太深，吊死在一颗树上，大不了就先谈着，谈着七八年，可谁曾想，这第一年，我就先干为敬。我得摆好这姿势，才能吹得出氤氲，嚼得出滋味。</span><br />
-				<span class="space"/><span class="comments">不得已，我开始奢望我们的未来，我想那是月老的好生善举。他却偷偷告诉我，我不能这么爱你,俗话说物极必反，你瞧那牛郎织女，正是如此。我说，我觉得这事确实是有些古怪，但我就是黏住了她，这我能如何。</span><br />
-				<span class="space"/><span class="comments">没办法，那就只能是这样，可是你这小姑娘呀，就是得要我哄你个七八十年才得行的吧。亦或是你是一颗小灾星，是那一颗和我一起度余生的星星。</span><br />
-				<span class="space"/><span class="comments">我在凡间向这颗星星许了个愿，我希望我能走得比你早，这样子我的后半生便全部都是你。但又不舍得单留你一人在世上，每想至此，我便额蹙心痛。</span><br />
-				<span class="space"/><span class="comments">絮絮之语难尽，但你要清楚，我如果爱你，绝不学痴情的鸟儿。</span><br />
-				<span class="space"/><span class="comments">但是没有如果，我爱你，很痴情。
+				<span class="comments">我最最最最可爱的张小朋友：</span><br />
+				<span class="space"><span class="comments">你好噢</span></span><br />
+				<span class="space"/><span class="comments">之前一直说要再写东西给你，可是又忙着考试，总是没能好好静下心来跟你讲，现在是北京时间18点52分，我要好好跟你说说。</span><br />
+				<span class="space"/><span class="comments">刚才你在烦电费的事，现在不知道你有没有好一点，如果还是的话，不要烦了噢，想想我欸，嘿嘿。我现在在图书馆想你想得要命，所以你也要想我噢，我有时候就会觉得我很爱说，就一讲就停不下来，有一点点惭愧，而且好多都是重复的话，不过我这么爱你，难道不该把爱你挂嘴上吗，要是我会写那种特别特别美好的词句就好了，这样子你一看，就能立马察觉到我有多爱你，我真的超爱你，不管我这个人有多么的平庸啊，我总是觉得我对你的爱很美。</span><br />
+				<span class="space"/><span class="comments">其实有时候我真的超级混蛋，我觉得自己真的很坏，但我是真的很正经的在爱你，我真的超级正经的噢，这点我还是很有信心的呢，说回到我混蛋的事，想想昨天你陪了我整整一天，我的心就止不住的往外面冒星星，可是我竟然那么混蛋在晚上的时候却没有顾及到你的感受，我真是该死。很多时候确实是我不好，有时候我也会有一些小脾气，但我对你是完全没有噢，我对你只有忍不住往外冒的小星星，那是爱你的小星星噢。</span><br />
+				<span class="space"/><span class="comments">下午的时候你跟我讲了好多事，我那时候就在想，那些人是怎么回事，你这么一个人，我打心眼里疼爱的一个人，怎么能被生活这么对待呢，你之前讲过要是我不喜欢你了，你就不和我在一起，我是爱你呀，我会不爱你吗，不会的，就像一句话讲的那样，我爱你就像爱生命，你不要以为我在胡说八道噢，我是在很认真的跟你讲，我现在满脑子都是你。</span><br />
+				<span class="space"/><span class="comments">我也不知道我讲了多少，感觉自己又乱七八糟没头没脑的讲了好多话，就是把自己脑子里的东西一骨碌全部倒出来，发现全部都是和你有关，我真的是不知道要怎么说了，现在时间是19点15分，无论多久，我都会爱你。
 				
 			</div>
 			<div id="loveHeart">
