--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 
-	<title>好巧，这有一封你的信诶</title>  
+	<title>点进来就是我的人了</title>  
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -24,8 +24,8 @@
 				<embed height="100" width="100" src="renxi.mp3" />
 			</audio>
 			<div id="code">
-				<span class="comments">世界上最可爱的女朋友：</span><br />
-				<span class="space"><span class="comments">你好呀</span></span><br />
+				<span class="comments">这个宇宙中最好看的女孩子：</span><br />
+				<span class="space"><span class="comments">你好</span></span><br />
 				<span class="space"/><span class="comments">我这有许些话想要跟你讲啊。我年少不更事，想做大生意，然后过上风流快活三妻四妾的生活。可惜胎死腹中，我遇到了你。</span><br />
 				<span class="space"/><span class="comments">我千万告诫自己，不要用情太深，吊死在一颗树上，大不了就先谈着，谈着七八年，可谁曾想，这第一年，我就先干为敬。我得摆好这姿势，才能吹得出氤氲，嚼得出滋味。</span><br />
 				<span class="space"/><span class="comments">不得已，我开始奢望我们的未来，我想那是月老的好生善举。他却偷偷告诉我，我不能这么爱你,俗话说物极必反，你瞧那牛郎织女，正是如此。我说，我觉得这事确实是有些古怪，但我就是黏住了她，这我能如何。</span><br />
@@ -39,12 +39,12 @@
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
-						要是我没记错的话，这是我们认识的第
+					         北京时间这是我们认识的第
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
 						我真的是超级喜欢你呀!!!<br/>
-						<div class="signature">- 你的明明不胖的男友</div>
+						<div class="signature">- 来自你的螺旋翻滚的男朋友</div>
 
 				</div>
 			</div>
