--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 
-	<title>好巧，这又有一封你的信诶</title>  
+	<title>点进来就是我的人噢</title>  
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -24,25 +24,25 @@
 				<embed height="100" width="100" src="renxi.mp3" />
 			</audio>
 			<div id="code">
-				<span class="comments">我最最最最可爱的张小朋友：</span><br />
-				<span class="space"><span class="comments">你好噢</span></span><br />
-				<span class="space"/><span class="comments">之前一直说要再写东西给你，可是又忙着考试，总是没能好好静下心来跟你讲，现在是北京时间18点52分，我要好好跟你说说。</span><br />
-				<span class="space"/><span class="comments">刚才你在烦电费的事，现在不知道你有没有好一点，如果还是的话，不要烦了噢，想想我欸，嘿嘿。我现在在图书馆想你想得要命，所以你也要想我噢，我有时候就会觉得我很爱说，就一讲就停不下来，有一点点惭愧，而且好多都是重复的话，不过我这么爱你，难道不该把爱你挂嘴上吗，要是我会写那种特别特别美好的词句就好了，这样子你一看，就能立马察觉到我有多爱你，我真的超爱你，不管我这个人有多么的平庸啊，我总是觉得我对你的爱很美。</span><br />
-				<span class="space"/><span class="comments">其实有时候我真的超级混蛋，我觉得自己真的很坏，但我是真的很正经的在爱你，我真的超级正经的噢，这点我还是很有信心的呢，说回到我混蛋的事，想想昨天你陪了我整整一天，我的心就止不住的往外面冒星星，可是我竟然那么混蛋在晚上的时候却没有顾及到你的感受，我真是该死。很多时候确实是我不好，有时候我也会有一些小脾气，但我对你是完全没有噢，我对你只有忍不住往外冒的小星星，那是爱你的小星星噢。</span><br />
-				<span class="space"/><span class="comments">下午的时候你跟我讲了好多事，我那时候就在想，那些人是怎么回事，你这么一个人，我打心眼里疼爱的一个人，怎么能被生活这么对待呢，你之前讲过要是我不喜欢你了，你就不和我在一起，我是爱你呀，我会不爱你吗，不会的，就像一句话讲的那样，我爱你就像爱生命，你不要以为我在胡说八道噢，我是在很认真的跟你讲，我现在满脑子都是你。</span><br />
-				<span class="space"/><span class="comments">我也不知道我讲了多少，感觉自己又乱七八糟没头没脑的讲了好多话，就是把自己脑子里的东西一骨碌全部倒出来，发现全部都是和你有关，我真的是不知道要怎么说了，现在时间是19点15分，无论多久，我都会爱你。
+				<span class="comments">宇宙级最好看的女孩子：</span><br />
+				<span class="space"><span class="comments">你好</span></span><br />
+				<span class="space"/><span class="comments">就在刚才我找到了这段代码藏在哪里，，所以我着急的就来给你讲讲话了，很着急的，我现在有一点点小担心，要是你突然打电话给我，是不是要被你发现我在写这个呀，所以你先不要打给我噢，等我写完发朋友圈了再找你噢。</span><br />
+				<span class="space"/><span class="comments">你今天跑去拍照了，肯定是超累的吧，而且又要回来修图，肯定忙的团团转了吧，抱抱你，距离我上回给你写东西已经过去了好久，中间我们又发生了好多事，但我们还是在一起，我超级庆幸我每回惹你生气你都会原谅我，但这不是说我会接着惹你生气，我会在以后的日子里不惹你生大气的，可能会有一点点小气，但我会哄你的，我保证！</span><br />
+				<span class="space"/><span class="comments">我也不知道说什么，但就是手指停不下来，就想一直给你打字，一直讲一直讲，就算什么都没说好像，但还是要讲，我好想以后和你一起过日子呀，可是我现在都不能好好的陪着你，我们很快很快就要一起住了宝贝，我们很快很快就可以生活在一起了，然后我们可以做好多好多的事，我们可以一起做想做的事，也可以就一直躺在床上消磨时光，就算什么都不做，但只有和你待一起就超有意思的。</span><br />
+				<span class="space"/><span class="comments">我还是想跟你说，我一直没有变，无论你告不告诉我你有多爱我，我还是会越来越爱你，这点是不会变得，我有时候是会有一些脾气，会摆臭脸给你看，但我绝对不是不喜欢你噢，我还是超喜欢你的，超级超级超级超级超级喜欢你的，一点点生气，就那么一点点的。</span><br />
+				<span class="space"/><span class="comments">现在是十点十八分，你应该在修图，我就在这没头没脑的打字，噢对了，我得换首背景音乐，换什么好呢，希望我还记得怎么换音乐，要是你听到的还是之前的那个，那就是我没换成功，嗯。。。。我喜欢你，不仅仅是喜欢。
 				
 			</div>
 			<div id="loveHeart">
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
-						要是我没记错的话，这是我们认识的第
+						北京时间这是我们认识的第
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
-						我真的是超级喜欢你呀!!!<br/>
-						<div class="signature">- 你的明明不胖的男友</div>
+						 爱心发射！！！<br/>
+						<div class="signature">- 你的螺旋翻滚的男朋友</div>
 
 				</div>
 			</div>
