--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
-						北京时间这是我们认识的第
+						我可记得这是我们认识的第
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
